# python-metallum

./: Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
metallum/: __init__.py  consts.py  operations.py  utils.py
metallum/models/: AlbumTypes.py  Lyrics.py  Metallum.py  MetallumCollection.py  MetallumEntity.py  Results.py  Search.py  SimilarArtists.py  __init__.py  album_types.py  lyrics.py  metallum.py  metallum_collection.py  metallum_entity.py  search.py  similar_artists.py
tests/: test_metallum_operations.py
