[tool.poetry]
name = "metallum"
version = "1.1.0"
description = "Python API for www.metal-archives.com"
license = "MIT"
authors = ['Lachlan Charlick <lachlan.charlick@gmail.com>']
readme = "README.md"
repository = "https://github.com/YisusChrist/python-metallum"
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = ">=3.6"
requests = "*"
requests-cache = "*"
pyquery = "*"
python-dateutil = "*"
lxml = "^5.1.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
