[tool.poetry]
name = "metallum"
version = "1.1.0"
description = "Python API for www.metal-archives.com"
license = "MIT"
authors = ['Lachlan Charlick <lachlan.charlick@gmail.com>']
readme = "README.md"
repository = "https://github.com/YisusChrist/python-metallum"
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.31.0"
requests-cache = "^1.1.1"
pyquery = "^2.0.0"
python-dateutil = "^2.8.2"
lxml = "^5.1.0"
fake-useragent = "^1.4.0"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.3"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pylint]
disable = [
   "W0613",  # Unused argument (unused-argument)
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
